[gd_scene load_steps=11 format=3 uid="uid://c3b2gesbs2dhq"]

[ext_resource type="Script" uid="uid://dn2lmhte3ph4" path="res://script/player.gd" id="1_iujtt"]
[ext_resource type="Shader" uid="uid://cxbwna127mgat" path="res://script/player.gdshader" id="2_m8nbj"]
[ext_resource type="Shader" uid="uid://bwm0wlbk41e3y" path="res://script/posterization.gdshader" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://dsx2rfhmrg7y3" path="res://scenes/vicki_m_1.tscn" id="4_dqkch"]
[ext_resource type="Texture2D" uid="uid://dax3hle463jbd" path="res://assets/vicki_crosshair (1).png" id="5_qlg0r"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_acsvw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_afl3o"]
render_priority = 2
shader = ExtResource("2_m8nbj")
shader_parameter/depth_threshold = 0.05
shader_parameter/steps = 8.0

[sub_resource type="QuadMesh" id="QuadMesh_enm71"]
material = SubResource("ShaderMaterial_afl3o")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dqkch"]
render_priority = 1
shader = ExtResource("3_qhqgy")
shader_parameter/steps = 16.0

[sub_resource type="QuadMesh" id="QuadMesh_qlg0r"]
material = SubResource("ShaderMaterial_dqkch")
flip_faces = true
size = Vector2(2, 2)

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_iujtt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_acsvw")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.598575, 0)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Camera3D"]
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_enm71")

[node name="posterization" type="MeshInstance3D" parent="Camera3D"]
visible = false
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_qlg0r")

[node name="luigi_point" type="Node3D" parent="Camera3D"]

[node name="vicki_m1" parent="Camera3D" instance=ExtResource("4_dqkch")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.33398, -0.155305, -0.289164)
cast_shadow = 0
skeleton = NodePath("../..")

[node name="Vicki_smoke_point" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.332223, -0.104571, -1.36351)

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -15, 0)

[node name="RayCast3D2" type="RayCast3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -13.0
offset_right = 11.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2

[node name="exit" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 230.0
offset_top = 218.0
offset_right = 390.0
offset_bottom = 296.0
text = "exit"

[node name="back to game" type="Button" parent="GUI"]
layout_mode = 0
offset_left = 196.0
offset_top = 69.0
offset_right = 419.0
offset_bottom = 160.0
text = "Back to game"

[node name="VickiCrosshair" type="Sprite2D" parent="."]
top_level = true
position = Vector2(320.166, 180.166)
texture = ExtResource("5_qlg0r")

[node name="weapon_GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ammo count" type="Label" parent="weapon_GUI"]
layout_mode = 0
offset_left = 534.0
offset_top = 275.0
offset_right = 574.0
offset_bottom = 298.0
theme_override_colors/font_color = Color(0.0846899, 0.0846899, 0.0846899, 1)
theme_override_colors/font_shadow_color = Color(0.233925, 0.233925, 0.233925, 1)
theme_override_font_sizes/font_size = 11
text = "Ammo"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="GUI/back to game" to="." method="_on_back_to_game_pressed"]
